resolve g, fixed segment jquery function, save search query into Excel'
git

--- a/app/views/papuas/show.html.erb
+++ b/app/views/papuas/show.html.erb
@@ -124,7 +124,7 @@
             <span class="text-red-400">Red</span> symbol means the consonants are not in Segment list
           </p>
         </dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2 leading-loose">
           <% @seg_hash.each do |k,v| %>
             <% if "#{v}".exclude?("none") %>
               <span class="px-4 inline-flex text-sm leading-5 font-semibold rounded-full bg-green-100 text-green-800">
