--- a/app/views/searches/show.xls.erb
+++ b/app/views/searches/show.xls.erb
@@ -7,6 +7,38 @@ xmlns:html="http://www.w3.org/TR/REC-html40">
 <Worksheet ss:Name="Sheet1">
   <Table>
     <Row>
+      <Cell><Data ss:Type="String">Query: </Data></Cell>
+    </Row>
+    <Row>
+      <Cell><Data ss:Type="String">Language</Data></Cell>
+      <Cell><Data ss:Type="String">Language Family</Data></Cell>
+      <Cell><Data ss:Type="String">ISO</Data></Cell>
+      <Cell><Data ss:Type="String">Area</Data></Cell>
+      <Cell><Data ss:Type="String">Country</Data></Cell>
+      <Cell><Data ss:Type="String">Region</Data></Cell>
+      <Cell><Data ss:Type="String">Inventory</Data></Cell>
+      <Cell><Data ss:Type="String">Consonant Number</Data></Cell>
+      <Cell><Data ss:Type="String">Vowel Number</Data></Cell>
+      <Cell><Data ss:Type="String">Total Number</Data></Cell>
+      <Cell><Data ss:Type="String">Result</Data></Cell>
+      <Cell><Data ss:Type="String">Time</Data></Cell>
+    </Row>
+    <Row>
+      <Cell><Data ss:Type="String"><%= @search.language_name %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.language_family %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.iso %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.area %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.country %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.region %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.inv %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.c_compare if @search.c_size.present? %> <%= @search.c_size %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.v_compare if @search.v_size.present? %> <%= @search.v_size %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.total_compare if @search.total_size.present? %> <%= @search.total_size %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.papuas.size %>/<%= Papua.all.size %> = <%= @search.result %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= @search.created_at.localtime %></Data></Cell>
+    </Row>
+
+    <Row>
       <Cell><Data ss:Type="String">Result: <%= @search.papuas.size %> </Data></Cell>
     </Row>
     <Row>
