--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -20,30 +20,51 @@
           <th scope="col" class="hover:bg-gray-100 cursor-pointer px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             <div class="flex flex-auto items-center">
               <p>ipa</p>
-              <input type="text" id="search1" onkeyup="myFunction(1)" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-16">
+              <input type="text" id="search1" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-16">
             </div>
           </th>
 
           <th scope="col" class="hover:bg-gray-100 cursor-pointer px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             <div class="flex flex-auto items-center">
-              sequence
-              <input type="text" id="search2" onkeyup="myFunction(2)" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+              cvd
+              <input type="text" id="search2" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-16">
             </div>
           </th>
 
           <th scope="col" class="hover:bg-gray-100 cursor-pointer px-2 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             <div class="flex flex-auto items-center">
-              category
-              <input type="text" id="search3" onkeyup="myFunction(3)" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+              Plain vs Non-Plain
+              <input type="text" id="search3" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
             </div>
           </th>
 
           <th scope="col" class="hover:bg-gray-100 cursor-pointer px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             <div class="flex flex-auto items-center">
-              place
-              <input type="text" id="search4" onkeyup="myFunction(4)" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+              Vocing
+              <input type="text" id="search4" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
             </div>
           </th>
+
+          <th scope="col" class="hover:bg-gray-100 cursor-pointer px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <div class="flex flex-auto items-center">
+              Place
+              <input type="text" id="search5" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+            </div>
+          </th>
+
+          <th scope="col" class="hover:bg-gray-100 cursor-pointer px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <div class="flex flex-auto items-center">
+              Manner
+              <input type="text" id="search6" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+            </div>
+          </th>
+
+          <!-- <th scope="col" class="hover:bg-gray-100 cursor-pointer px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <div class="flex flex-auto items-center">
+              Unicode
+              <input type="text" id="search7" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md ml-2 w-36">
+            </div>
+          </th> -->
         </tr>
       </thead>
       <tbody class="bg-white divide-y divide-gray-200">
@@ -59,14 +80,23 @@
             </div>
           </td>
           <td class="px-4 py-4 whitespace-normal">
-            <div class="text-sm text-gray-500 lowercase"><%= segment.sequence %></div>
+            <div class="text-sm text-gray-500"><%= segment.cvd %></div>
           </td>
           <td class="px-2 py-4 whitespace-normal">
-            <div class="text-sm text-gray-500 lowercase"><%= segment.category %></div>
+            <div class="text-sm text-gray-500"><%= segment.plain_vs_non_plain %></div>
           </td>
-          <td class="px-3 py-4 whitespace-normal text-sm text-gray-500 lowercase">
+          <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
+            <%= segment.voicing %>
+          </td>
+          <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
             <%= segment.place %>
           </td>
+          <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
+            <%= segment.manner %>
+          </td>
+          <!-- <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
+            <%= segment.unicode %>
+          </td> -->
         </tr>
         <% end %>
       </tbody>
@@ -77,59 +107,95 @@
 
 <script>
 
-  // source: https://forum.jquery.com/topic/filter-table-by-multiple-user-text-inputs-separated-by-a-comma
+  //https://stackoverflow.com/questions/11871253/execute-document-ready-even-if-user-came-to-the-page-by-hitting-the-back-button/48213805
+  new Date().getTime();
+  
+  //https://stackoverflow.com/questions/3628536/history-back-doesnt-trigger-document-ready
+  window.onpageshow = function(event) {
+      
+    // source: https://forum.jquery.com/topic/filter-table-by-multiple-user-text-inputs-separated-by-a-comma
+    var $rows = $('#myTable3 tr').not(':first');
+    var filters = { col1: '', col2: '', col3: '', col4: '', col5: '', col6: '', col7: ''};
+    $('#search1').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col1 = val;
+      applyFilters();
+    });
+    $('#search2').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col2 = val;
+      applyFilters();
+    });
+    $('#search3').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col3 = val;
+      applyFilters();
+    });
+    $('#search4').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col4 = val;
+      applyFilters();
+    });
+    $('#search5').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col5 = val;
+      applyFilters();
+    });
+    $('#search6').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col6 = val;
+      applyFilters();
+    });
+    $('#search7').keyup(function() {
+      var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+      filters.col7 = val;
+      applyFilters();
+    });
 
-  var $rows = $('#myTable3 tr').not(':first');
-  var filters = { col1: '', col2: '', col3: '', col4: ''};
-  $('#search1').keyup(function() {
-    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
-    filters.col1 = val;
-    applyFilters();
-  });
-  $('#search2').keyup(function() {
-    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
-    filters.col2 = val;
-    applyFilters();
-  });
-  $('#search3').keyup(function() {
-    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
-    filters.col3 = val;
-    applyFilters();
-  });
-  $('#search4').keyup(function() {
-    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
-    filters.col4 = val;
-    applyFilters();
-  });
+    function applyFilters() {
+      $rows.show();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(2)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col1);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(3)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col2);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(4)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col3);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(5)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col4);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(6)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col5);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(7)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col6);
+      }).hide();
+      $rows.filter(function() {
+        var text = $(this).find('td:nth-child(8)').text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(filters.col7);
+      }).hide();
+    };
 
-  function applyFilters() {
-    $rows.show();
-    $rows.filter(function() {
-      var text = $(this).find('td:nth-child(2)').text().replace(/\s+/g, ' ').toLowerCase();
-      return !~text.indexOf(filters.col1);
-    }).hide();
-    $rows.filter(function() {
-      var text = $(this).find('td:nth-child(3)').text().replace(/\s+/g, ' ').toLowerCase();
-      return !~text.indexOf(filters.col2);
-    }).hide();
-    $rows.filter(function() {
-      var text = $(this).find('td:nth-child(4)').text().replace(/\s+/g, ' ').toLowerCase();
-      return !~text.indexOf(filters.col3);
-    }).hide();
-    $rows.filter(function() {
-      var text = $(this).find('td:nth-child(5)').text().replace(/\s+/g, ' ').toLowerCase();
-      return !~text.indexOf(filters.col4);
-    }).hide();
-  };
-
-
-  // resource: https://stackoverflow.com/questions/53357650/filtering-table-columns-based-on-multiple-input-fields
-  function performReset() {
-    document.getElementById("search1").value = "";
-    document.getElementById("search2").value = "";
-    document.getElementById("search3").value = "";
-    document.getElementById("search4").value = "";
-    $rows.show();
+    // resource: https://stackoverflow.com/questions/53357650/filtering-table-columns-based-on-multiple-input-fields
+    function performReset() {
+      document.getElementById("search1").value = "";
+      document.getElementById("search2").value = "";
+      document.getElementById("search3").value = "";
+      document.getElementById("search4").value = "";
+      document.getElementById("search5").value = "";
+      document.getElementById("search6").value = "";
+      document.getElementById("search7").value = "";
+      $rows.show();
+    }
   }
+  
 
 </script>
