--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,17 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (November 7th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>New feature: Convert keyboard input '<span class="font-sans">g</span>' to 'ɡ' for backend query.</li>
+			<li>New feature: Updated Segment structure with more fields.</li>
+			<li>Update the Segment show page with exact match results.</li>
+			<li>Fixed Segment input query function.</li>
+			<li>Changed /'<span class="font-sans">g</span>'b/ to /ɡb/: Dedua, Kube, Migabac, Ono, Amele, Bau. </li>
+			<li>Saved search query into Excel file.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 28th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>New feature: Added back original simple search function with reset button.</li>
