--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -7,8 +7,10 @@
 			<li>New feature: Updated Segment structure with more fields.</li>
 			<li>Update the Segment show page with exact match results.</li>
 			<li>Fixed Segment input query function.</li>
-			<li>Changed /'<span class="font-sans">g</span>'b/ to /ɡb/: Dedua, Kube, Migabac, Ono, Amele, Bau. </li>
+			<li>Changed /<span class="font-sans">g</span>b/ to /ɡb/: Dedua, Kube, Migabac, Ono, Amele, Bau. </li>
 			<li>Saved search query into Excel file.</li>
+			<li>Fixed '<span class="font-sans">g</span>' in Segment search function.</li>
+			<li>Changed /kxw/ to /kx<sup>w</sup>/: Migabac.</li>
 		</ul>
 	</div>
 	<div class="update my-10">
