--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,12 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (November 12th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>Fixed Segments page "Reset" button function.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (November 7th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>New feature: Convert keyboard input '<span class="font-sans">g</span>' to 'ɡ' for backend query.</li>
