update Segments fields

--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,18 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (November 13th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>/ⁿdʲ/: Changed "Pre-nasalised, palatalised" to "Pre-nasalised, Palatalised".</li>
+			<li>/ⁿʣ̪ʲ/: Changed "Prenasalised, palatalised" to "Pre-nasalised, Palatalised".</li>
+			<li>/ᵑɡʷ/: Changed "Pre-nasalised. Labialised" to "Pre-nasalised, Labialised".</li>
+			<li>/ⁿɈ/: Changed "Pre-nasalized" to "Pre-nasalised".</li>
+			<li>/lʲ/: Changed "Lateral approximant" to "Lateral Approximant".</li>
+			<li>/l̪d̪/: Changed "Lateral flap" to "Lateral Flap".</li>
+			<li>/ɺ/: Changed "Lateral tap" to "Lateral Tap".</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (November 12th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>Fixed Segments page "Reset" button function.</li>
