--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,8 +1,17 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (November 14th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>New feature: Added two Segment columns "NUMBER" and "ADDITIONAL", both with input search filter.</li>
+			<li>New feature: Changed "CVD", "PLAIN", "VOICING", "PALCE" and "MANNER" Segment columns with dropdown filter.</li>
+			<li>Changed Segment column name "PLAIN VS NON-PLAIN" to "PLAIN".</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (November 13th, 2021):</p>
 		<ul class="list-inside list-disc">
+			<li>New feature: Blue language name in in Map is linked to its information page.</li>
 			<li>/ⁿdʲ/: Changed "Pre-nasalised, palatalised" to "Pre-nasalised, Palatalised".</li>
 			<li>/ⁿʣ̪ʲ/: Changed "Prenasalised, palatalised" to "Pre-nasalised, Palatalised".</li>
 			<li>/ᵑɡʷ/: Changed "Pre-nasalised. Labialised" to "Pre-nasalised, Labialised".</li>
