--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,13 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (November 17th, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>New page: Phoneme Search allows you to find languages by specifying which phonemes are present in their phonological inventories and/or by specifying phonemes which phonemes are absent from their inventories.</li>
+			
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (November 14th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>New feature: Added two Segment columns "NUMBER" and "ADDITIONAL", both with input search filter.</li>
